--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color:rgb(242, 210, 255);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
