--- a/src/components1/myIntroStyle.css
+++ b/src/components1/myIntroStyle.css
@@ -32,6 +32,11 @@ h2 {
     font-family: 'Alegreya', serif;
 }
 
+.navtital {
+    font-size: 20px;
+    font-family: 'Alegreya', serif;
+}
+
 .silver-background {
     background-color: silver;
 }
