--- a/src/components1/mystyle.css
+++ b/src/components1/mystyle.css
@@ -20,7 +20,7 @@
 
   body {background-color: rgb(195, 191, 231)}
         
-            h2 {font-family:fantasy}
+            
         
             .fontbox {
 font-family:'Alegreya', serif;}
@@ -247,7 +247,9 @@ h3 {font-family:'Alegreya', serif;}
         
         #box-container {
             display: flex;
-            height: 500px;
+            justify-content: center;
+            align-items: flex-start;
+            height: 850px;
             
           }
         
@@ -259,13 +261,16 @@ h3 {font-family:'Alegreya', serif;}
             #box-container3 {
             display: flex;
             height: 80px;
-            justify-content: center
+            justify-content: center;
+            align-items: flex-end;
+            
             
           }
           #box-1 {
             background-color: rgb(255, 205, 253);
             width: 50%;
             height: 100%;
+            justify-content: flex-start
             
           }
         
@@ -331,7 +336,7 @@ h3 {font-family:'Alegreya', serif;}
               border-width: 5px;
               border-style: ridge;
               border-radius: 15%;
-              margin-top: 10%;
+              margin-top: 15%;
               text-align: center;
               object-fit: contain;
       }
@@ -342,6 +347,26 @@ h3 {font-family:'Alegreya', serif;}
       height: 168px;
       }        
         
+      .earcard2 {
+        width: 150px;
+        height: 165px;
+        background: url("https://image.shutterstock.com/image-vector/vector-illustration-ear-on-white-260nw-1161038935.jpg") no-repeat;
+        background-size: 100%;
+        display: inline-block;
+                border-color: black;
+            border-width: 5px;
+            border-style: ridge;
+            border-radius: 15%;
+            margin-top: 0%;
+            text-align: center;
+            object-fit: contain;
+    }
+    .earcard2:hover {
+        background: url("https://clipartstation.com/wp-content/uploads/2018/10/not-listening-clipart.png") no-repeat;
+    background-size: 100%
+    }
+
+
       .earcard {
         width: 150px;
         height: 165px;
@@ -352,7 +377,7 @@ h3 {font-family:'Alegreya', serif;}
             border-width: 5px;
             border-style: ridge;
             border-radius: 15%;
-            margin-top: 10%;
+            margin-top: 0%;
             text-align: center;
             object-fit: contain;
     }
@@ -450,12 +475,20 @@ h3 {font-family:'Alegreya', serif;}
             justify-content: center}
         
           #box-2 {
-            background-color: #ffd4f6;
+            background-color: rgb(255, 205, 253);
             width: 50%;
             height: 100%;
-            text-align: center
+            justify-content: flex-start
           }
+
+          #vid2 {
+            width: 256px ;
+            height: 144px ;
+        }
         
+        .backgrounddarker {
+          background-color: rgb(247, 175, 189)
+        }
 
 
  :hover.very-thick-black-border {
